--- a/Expanding-Cards/index.html
+++ b/Expanding-Cards/index.html
@@ -22,7 +22,7 @@
             <h1>Gamer</h1>
         </div>
         <div class="panel" style="background-image: url('images/image4.jpg')">
-            <h1>Developer</h1>
+            <h1>Designer</h1>
         </div>
         <div class="panel" style="background-image: url('images/image5.jpg')">
             <h1>Chef turned Developer</h1>
