--- a/Expanding-Cards/index.html
+++ b/Expanding-Cards/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="I-am">I am a...</h1>
+        <h1 class="I-am"><a href="index.html">I am a...</a></h1>
         <div class="toggle"><i class="fas fa-bars"></i></div>
     </header>
     <div class="container">
