--- a/Tailwind-CSS-Tutorial/public/index.html
+++ b/Tailwind-CSS-Tutorial/public/index.html
@@ -12,13 +12,13 @@
         <div class="px-4 cursor-pointer md:hidden" id="bars">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
         </div>
-        <div class="hidden md:block" id="menu">
-            <a href="index.html" class="p-4 hover:text-purple-600 duration-300">Home</a>
-            <a href="about.html" class="p-4 hover:text-purple-600 duration-300">About</a>
-            <a href="contact.html" class="p-4 hover:text-purple-600 duration-300">Contact</a>
+        <div class="hidden md:flex" id="menu">
+            <a href="index.html" class="block p-4 transform hover:scale-110 hover:text-purple-600 duration-300">Home</a>
+            <a href="about.html" class="block p-4 transform hover:scale-110 hover:text-purple-600 duration-300">About</a>
+            <a href="contact.html" class="block p-4 transform hover:scale-110 hover:text-purple-600 duration-300">Contact</a>
         </div>
     </nav>
-    <!-- Hero Section -->
+
     <div class="bg-no-repeat h-screen bg-center bg-cover center" style="background-image: url('./images/img.jpg')">
         <div class="text-center font-bold">
             <h1 class="lg:text-9xl sm:text-6xl text-4xl mb-10 text-white transform hover:scale-110 hover:text-purple-600 duration-300">
