--- a/Expanding-Cards/index.html
+++ b/Expanding-Cards/index.html
@@ -21,13 +21,14 @@
         <div class="panel" style="background-image: url('images/image3.jpg')">
             <h1>Gamer</h1>
         </div>
-        <div class="panel" style="background-image: url('images/image4.jpg')">
+        <div class="panel" style="background-image: url('images/image4.png')">
             <h1>Designer</h1>
         </div>
         <div class="panel" style="background-image: url('images/image5.jpg')">
             <h1>Chef turned Developer</h1>
         </div>
     </div>
+    <div class="frame"></div>
     <script src="script.js"></script>
 </body>
 </html>
