--- a/Expanding-Cards/index.html
+++ b/Expanding-Cards/index.html
@@ -25,7 +25,7 @@
             <h1>Designer</h1>
         </div>
         <div class="panel" style="background-image: url('images/image5.jpg')">
-            <h1>Chef turned Developer</h1>
+            <h1>Developer</h1>
         </div>
     </div>
     <div class="frame"></div>
