--- a/Expanding-Cards/index.html
+++ b/Expanding-Cards/index.html
@@ -28,7 +28,7 @@
             <h1>Developer</h1>
         </div>
     </div>
-    <div class="frame"></div>
+    <div class="frame active" style="background-image: url('images/image1.jpg')"></div>
     <script src="script.js"></script>
 </body>
 </html>
