Tailwind-CSS Tutorial

--- a/Tailwind-CSS-Tutorial/public/index.html
+++ b/Tailwind-CSS-Tutorial/public/index.html
@@ -22,7 +22,7 @@
     <div class="bg-no-repeat h-screen bg-center bg-cover center" style="background-image: url('./images/img.jpg')">
         <div class="text-center font-bold">
             <h1 class="lg:text-9xl sm:text-6xl text-4xl mb-10 text-white transform hover:scale-110 hover:text-purple-600 duration-300">
-                Choose your Colors
+                Choose Your Colors
             </h1>
             <a href="" class="text-white text-xl center transform hover:scale-110 hover:text-purple-600 duration-300">
                 Explore<svg class="w-6 h-6 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
