--- a/Progress-Steps/index.html
+++ b/Progress-Steps/index.html
@@ -10,10 +10,10 @@
  <div class="container">
      <div class="progress-container">
          <div class="progress" id="progress"></div>
-         <div class="circle active">1</div>
-         <div class="circle">2</div>
-         <div class="circle">3</div>
-         <div class="circle">4</div>
+         <div class="circle active">Winter</div>
+         <div class="circle">Spring</div>
+         <div class="circle">Summer</div>
+         <div class="circle">Fall</div>
      </div>
 
      <button class="btn" id="prev" disabled>Prev</button>
