--- a/Progress-Steps/index.html
+++ b/Progress-Steps/index.html
@@ -7,6 +7,10 @@
     <title>Progress Steps</title>
 </head>
 <body>
+<div class="quote">
+    <p>Each moment of the year has it's own beauty.</p>
+    <span style="text-align: center;">-Ralph Waldo Emerson</span>
+</div>
  <div class="container">
      <div class="progress-container">
          <div class="progress" id="progress"></div>
