--- a/Glide-and-Hover/index.html
+++ b/Glide-and-Hover/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.css">
+    
     <link rel="stylesheet" href="./css/glide.core.min.css">
+    <link rel="stylesheet" href="./css/main.css">
+    
     <script src="./js/main.js"></script>
     <script src="./js/hover.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="./js/glide.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js" integrity="sha512-XI02ivhfmEfnk8CEEnJ92ZS6hOqWoWMKF6pxF/tC/DXBVxDXgs2Kmlc9CHA0Aw2dX03nrr8vF54Z6Mqlkuabkw==" crossorigin="anonymous"></script> -->
 
     <title>Glide and Hover</title>
 </head>
@@ -149,12 +153,13 @@
                         <div data-glide-dir="<" id="prev">
                             <i class="fa fa-arrow-left"></i>
                         </div>
-                        <div data-glide-dir="<" id="next">
+                        <div data-glide-dir=">" id="next">
                             <i class="fa fa-arrow-right"></i>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="background"></div>
         </section>
     </body>
 </html>
