--- a/Glide-and-Hover/index.html
+++ b/Glide-and-Hover/index.html
@@ -12,8 +12,8 @@
     
     <script src="./js/main.js"></script>
     <script src="./js/hover.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="./js/glide.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js" integrity="sha512-XI02ivhfmEfnk8CEEnJ92ZS6hOqWoWMKF6pxF/tC/DXBVxDXgs2Kmlc9CHA0Aw2dX03nrr8vF54Z6Mqlkuabkw==" crossorigin="anonymous"></script> -->
 
@@ -57,12 +57,12 @@
                             <h4>NEW YORK</h4>
                             <h4>SONOMA COUNTY</h4>
                         </div>
-                        <div id="description">
+                        <!-- <div id="description">
                             <p>When one thinks of Santa Monica, the attraction of the Pier inevitably comes to mind. Its red and yellow Ferris wheel is a city icon. The Pier offers Pacific Park, a full service amusement park, combined with plenty of restaurants, bars, and souvenir shops, as well as an entertaining arcade with more than 200 games.</p>
                             <p>Cloud Gate, aka "The Bean," is a public sculpture by Indian-born British artist Sir Anish Kapoor, that is the centerpiece of AT&T Plaza at Millennium Park in the Loop community area of Chicago, Illinois. ... Kapoor's design was inspired by liquid mercury and the sculpture's surface reflects and distorts the city's skyline.</p>
                             <p>The Brooklyn Bridge looms majestically over New York City's East River, linking the two boroughs of Manhattan and Brooklyn. Since 1883, its granite towers and steel cables have offered a safe and scenic passage to millions of commuters and tourists, trains and bicycles, pushcarts and cars.</p>
                             <p>Sonoma is a historic city in northern California at the heart of the renowned Sonoma Valley winemaking region. It's known for its art galleries and the colonial-era Sonoma Plaza. Surrounding this plaza are significant 19th-century adobe buildings including Mission San Francisco Solano and the Sonoma Barracks, once used by the Mexican military. Seasonally, the square hosts a popular weekly farmer's market.</p>
-                        </div>
+                        </div> -->
                         <div class="btn">
                             <p>Explore</p>
                             <i class="fa fa-arrow-right"></i>
