DNA to RNA Conversion

--- a/Landing-Div-Hover/index.html
+++ b/Landing-Div-Hover/index.html
@@ -21,21 +21,24 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus beatae ducimus obcaecati suscipit ex facilis!</p>
             </div>
             <div class="col">
-                <div class="card">
-                    <h5>Placeholder</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="card">
-                    <h5>Placeholder</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="card">
-                    <h5>Placeholder</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="card">
-                    <h5>Placeholder</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="cardcontainer">
+
+                    <div class="card">
+                        <h5>Placeholder</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="card">
+                        <h5>Placeholder</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="card">
+                        <h5>Placeholder</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="card">
+                        <h5>Placeholder</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
             </div>
         </div>
