--- a/Tailwind-CSS-Tutorial/public/index.html
+++ b/Tailwind-CSS-Tutorial/public/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <nav role="navigation" class="flex justify-between items-center h-16 bg-gradient-to-r from-blue-600 via-green-500 to-yellow-400 text-white relative">
-        <a href="index.html" class="pl-5 transform hover:scale-110 hover:text-purple-600 duration-300">PALETTE</a>
+        <a href="index.html" class="pl-5 transform hover:scale-110 duration-300">PALETTE</a>
         <div class="px-4 cursor-pointer md:hidden" id="bars">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
         </div>
         <div class="hidden md:flex" id="menu">
-            <a href="index.html" class="block p-4 transform hover:scale-110 hover:text-purple-600 duration-300">Home</a>
-            <a href="about.html" class="block p-4 transform hover:scale-110 hover:text-purple-600 duration-300">About</a>
-            <a href="contact.html" class="block p-4 transform hover:scale-110 hover:text-purple-600 duration-300">Contact</a>
+            <a href="index.html" class="block p-4 transform hover:scale-110  duration-300">Home</a>
+            <a href="about.html" class="block p-4 transform hover:scale-110  duration-300">About</a>
+            <a href="contact.html" class="block p-4 transform hover:scale-110  duration-300">Contact</a>
         </div>
     </nav>
 
-    <div class="bg-no-repeat h-screen bg-center bg-cover center" style="background-image: url('./images/img.jpg')">
+    <div class="bg-no-repeat h-screen bg-center bg-cover flex justify-center items-center" style="background-image: url('./images/img.jpg')">
         <div class="text-center font-bold">
-            <h1 class="lg:text-9xl sm:text-6xl text-4xl mb-10 text-white transform hover:scale-110 hover:text-purple-600 duration-300">
+            <h1 class="lg:text-9xl sm:text-6xl text-4xl mb-10 text-white transform hover:scale-110  duration-300">
                 Choose Your Colors
             </h1>
-            <a href="" class="text-white text-xl center transform hover:scale-110 hover:text-purple-600 duration-300">
+            <a href="" class="text-white text-xl flex justify-center items-center transform hover:scale-110  duration-300">
                 Explore<svg class="w-6 h-6 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
             </a>
         </div>
