--- a/Tailwind-CSS-Tutorial/public/index.html
+++ b/Tailwind-CSS-Tutorial/public/index.html
@@ -7,7 +7,7 @@
     <title>Tailwind Landing</title>
 </head>
 <body>
-    <nav role="navigation" class="flex justify-between items-center h-16 bg-gradient-to-r from-blue-600 via-green-500 to-yellow-400 text-white relative">
+    <nav role="navigation" class="center h-16 bg-gradient-to-r from-blue-600 via-green-500 to-yellow-400 text-white relative">
         <a href="index.html" class="pl-5 transform hover:scale-110 duration-300">PALETTE</a>
         <div class="px-4 cursor-pointer md:hidden" id="bars">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
@@ -24,7 +24,7 @@
             <h1 class="lg:text-9xl sm:text-6xl text-4xl mb-10 text-white transform hover:scale-110  duration-300">
                 Choose Your Colors
             </h1>
-            <a href="" class="text-white text-xl flex justify-center items-center transform hover:scale-110  duration-300">
+            <a href="" class="text-white text-xl flex justify-center items-center transform hover:scale-110 cursor-pointer duration-300">
                 Explore<svg class="w-6 h-6 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
             </a>
         </div>
